--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
       <!-- project #1 -->
       <section class="project" id="project-1">
         <div class="project__picture">
-          <img class="project__image" src="<%=require('./images/1-1.jpg')%>" alt="">
+          <img class="project__image" src="images/1-1.jpg" alt="">
         </div>
         <div class="project__content">
           <div class="project__head">
@@ -66,37 +66,37 @@
             </div>
             <div class="project__pictures">
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/1-2.jpg')%>" alt="">
+                <img class="project__image" src="images/1-2.jpg" alt="">
                 <div class="project__picture-about">Text</div>
               </div>
               <div class="gallery">
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/1-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/1-1.jpg" alt="">
                   </div>
                   <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/1-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/1-2.jpg" alt="">
                   </div>
                   <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/1-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/1-2.jpg" alt="">
                   </div>
                   <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/1-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/1-1.jpg" alt="">
                   </div>
                   <div class="project__picture-about">Text</div>
                 </div>
               </div>
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/1-1.jpg')%>" alt="">
+                <img class="project__image" src="images/1-1.jpg" alt="">
               </div>
               <div class="project__picture-about">Text</div>
             </div>
@@ -113,7 +113,7 @@
       <!-- project #2 -->
       <section class="project">
         <div class="project__picture">
-          <img class="project__image" src="<%=require('./images/2-1.jpg')%>" alt="">
+          <img class="project__image" src="images/2-1.jpg" alt="">
         </div>
         <div class="project__content">
           <div class="project__head">
@@ -133,32 +133,32 @@
             </div>
             <div class="project__pictures">
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/2-2.jpg')%>" alt="">
+                <img class="project__image" src="images/2-2.jpg" alt="">
               </div>
               <div class="gallery">
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/2-1.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/2-2.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/2-2.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/2-1.jpg" alt="">
                   </div>
                 </div>
               </div>
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/2-1.jpg')%>" alt="">
+                <img class="project__image" src="images/2-1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -174,7 +174,7 @@
       <!-- project #3 -->
       <section class="project">
         <div class="project__picture">
-          <img class="project__image" src="<%=require('./images/3-1.jpg')%>" alt="">
+          <img class="project__image" src="images/3-1.jpg" alt="">
         </div>
         <div class="project__content">
           <div class="project__head">
@@ -194,32 +194,32 @@
             </div>
             <div class="project__pictures">
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/3-2.jpg')%>" alt="">
+                <img class="project__image" src="images/3-2.jpg" alt="">
               </div>
               <div class="gallery">
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/3-1.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/3-2.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/3-2.jpg" alt="">
                   </div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
-                    <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
+                    <img class="gallery__image" src="images/3-1.jpg" alt="">
                   </div>
                 </div>
               </div>
               <div class="project__picture">
-                <img class="project__image" src="<%=require('./images/3-1.jpg')%>" alt="">
+                <img class="project__image" src="images/3-1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -303,7 +303,7 @@
   </div>
 
   <!--scripts.begin-->
-  <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
+  <script src="index.js"></script>
   <!--scripts.end-->
 
 </body>
