--- a/src/index.html
+++ b/src/index.html
@@ -134,32 +134,38 @@
             <div class="project__pictures">
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/2-2.jpg')%>" alt="">
+                <div class="project__picture-about">Text</div>
               </div>
               <div class="gallery">
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
               </div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/2-1.jpg')%>" alt="">
               </div>
+              <div class="project__picture-about">Text</div>
             </div>
           </div>
           <div class="project__foot">
@@ -195,32 +201,38 @@
             <div class="project__pictures">
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/3-2.jpg')%>" alt="">
+                <div class="project__picture-about">Text</div>
               </div>
               <div class="gallery">
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
                   </div>
+                  <div class="project__picture-about">Text</div>
                 </div>
               </div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/3-1.jpg')%>" alt="">
               </div>
+              <div class="project__picture-about">Text</div>
             </div>
           </div>
           <div class="project__foot">
