--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <header class="header">
+    <header class="header" id="header">
       
       <button class="btn-modal header__scroll">
         <span class="btn-modal__text">SCROLL</span>
