--- a/src/index.html
+++ b/src/index.html
@@ -123,14 +123,16 @@
             </h2>
           </div>
           <div class="project__body">
+            <div class="project__center-txt">Identiti, digital</div>
             <div class="project__desc">
-              <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
+             
+              <!-- <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
                   PRODUCTION</span></p>
               <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
                 сло­во­лит­ней Ле­ма­на в 1912 го­ду.
                 Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
                 осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
-                пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
+                пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p> -->
             </div>
             <div class="project__pictures">
               <div class="project__picture">
