--- a/src/index.html
+++ b/src/index.html
@@ -56,15 +56,7 @@
             </h2>
           </div>
           <div class="project__body">
-            <div class="project__desc">
-              <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
-                  PRODUCTION</span></p>
-              <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
-                сло­во­лит­ней Ле­ма­на в 1912 го­ду.
-                Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
-                осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
-                пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
-            </div>
+            <div class="project__center-txt">Identiti, digital</div>
             <div class="project__pictures">
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/1-2.jpg')%>" alt="">
@@ -75,31 +67,40 @@
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/1-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/1-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/1-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/1-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
+              <div class="project__picture-about">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/1-1.jpg')%>" alt="">
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__desc">
+                <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
+                    PRODUCTION</span></p>
+                <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
+                  сло­во­лит­ней Ле­ма­на в 1912 го­ду.
+                  Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
+                  осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
+                  пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
+              </div>
             </div>
           </div>
           <div class="project__foot">
@@ -124,16 +125,6 @@
           </div>
           <div class="project__body">
             <div class="project__center-txt">Identiti, digital</div>
-            <div class="project__desc">
-             
-              <!-- <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
-                  PRODUCTION</span></p>
-              <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
-                сло­во­лит­ней Ле­ма­на в 1912 го­ду.
-                Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
-                осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
-                пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p> -->
-            </div>
             <div class="project__pictures">
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/2-2.jpg')%>" alt="">
@@ -144,31 +135,40 @@
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/2-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
+              <div class="project__picture-about">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/2-1.jpg')%>" alt="">
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__desc">
+                <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
+                    PRODUCTION</span></p>
+                <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
+                  сло­во­лит­ней Ле­ма­на в 1912 го­ду.
+                  Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
+                  осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
+                  пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
+              </div>
             </div>
           </div>
           <div class="project__foot">
@@ -192,15 +192,8 @@
             </h2>
           </div>
           <div class="project__body">
-            <div class="project__desc">
-              <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
-                  PRODUCTION</span></p>
-              <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
-                сло­во­лит­ней Ле­ма­на в 1912 го­ду.
-                Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
-                осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
-                пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
-            </div>
+            <div class="project__center-txt">Identiti, digital</div>
+            
             <div class="project__pictures">
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/3-2.jpg')%>" alt="">
@@ -211,31 +204,40 @@
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-2.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
                 <div class="gallery__column">
                   <div class="gallery__item">
                     <img class="gallery__image" src="<%=require('./images/3-1.jpg')%>" alt="">
                   </div>
-                  <div class="project__picture-about">Text</div>
+                  <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
+              <div class="project__picture-about">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/3-1.jpg')%>" alt="">
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__desc">
+                <p class="project__paragraph">что сделано: <span class="project__desc-span">CAMPAIGN, ART DIRECTION,
+                    PRODUCTION</span></p>
+                <p class="project__paragraph">Са­мый дав­ний из из­вест­ных мне кон­кур­сов был ор­га­ни­зо­ван
+                  сло­во­лит­ней Ле­ма­на в 1912 го­ду.
+                  Пред­се­да­те­лем её прав­ле­ния на то вре­мя был Иосиф Иоси­фо­вич Ле­ман, один из сы­но­вей
+                  осно­ва­те­ля — Оси­па Ива­но­ви­ча Ле­ма­на. Иосиф Иоси­фо­вич уна­сле­до­вал не толь­ко свою до­лю в
+                  пред­при­я­тии от­ца, но и ис­крен­ний ин­те­рес к ти­по­гра­фи­ке, шриф­</p>
+              </div>
             </div>
           </div>
           <div class="project__foot">
