--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
                   <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__picture-about project__picture-about--desctop">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/1-1.jpg')%>" alt="">
               </div>
@@ -156,7 +156,7 @@
                   <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__picture-about project__picture-about--desctop">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/2-1.jpg')%>" alt="">
               </div>
@@ -225,7 +225,7 @@
                   <div class="project__center-txt--mob">Text</div>
                 </div>
               </div>
-              <div class="project__picture-about">Text</div>
+              <div class="project__picture-about project__picture-about--desctop">Text</div>
               <div class="project__picture">
                 <img class="project__image" src="<%=require('./images/3-1.jpg')%>" alt="">
               </div>
